crates/alder-parse/src/snapshots/alder_parse__type___tests__record_single.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\n{ name : String }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Record {
        fields: [
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: "name",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 16,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 10,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        name: "String",
                        args: [],
                    },
                },
            },
        ],
        ext: None,
    },
}
