crates/alder-parse/src/snapshots/alder_parse__type___tests__record_with_function.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\n{ onClick : msg -> Cmd msg }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 29,
        },
    },
    value: Record {
        fields: [
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: "onClick",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 27,
                        },
                    },
                    value: Lambda {
                        from: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 13,
                                },
                                end: Position {
                                    line: 1,
                                    column: 16,
                                },
                            },
                            value: Var(
                                "msg",
                            ),
                        },
                        to: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 20,
                                },
                                end: Position {
                                    line: 1,
                                    column: 27,
                                },
                            },
                            value: Type {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 20,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 23,
                                    },
                                },
                                name: "Cmd",
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 24,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 27,
                                            },
                                        },
                                        value: Var(
                                            "msg",
                                        ),
                                    },
                                ],
                            },
                        },
                    },
                },
            },
        ],
        ext: None,
    },
}
