crates/alder-parse/src/snapshots/alder_parse__type___tests__tuple_multiline.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code (indented inside a declaration):\n\n    (\n        Int,\n        String,\n        Bool\n    )\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 5,
            column: 6,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 9,
                },
                end: Position {
                    line: 2,
                    column: 12,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 2,
                        column: 12,
                    },
                },
                name: "Int",
                args: [],
            },
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 9,
                },
                end: Position {
                    line: 3,
                    column: 15,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 15,
                    },
                },
                name: "String",
                args: [],
            },
        },
        rest: [
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 9,
                    },
                    end: Position {
                        line: 4,
                        column: 13,
                    },
                },
                value: Type {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 9,
                        },
                        end: Position {
                            line: 4,
                            column: 13,
                        },
                    },
                    name: "Bool",
                    args: [],
                },
            },
        ],
    },
}
