crates/alder-parse/src/snapshots/alder_parse__type___tests__tuple_nested.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\n((Int, String), Bool)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 22,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
            value: Tuple {
                first: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 3,
                            },
                            end: Position {
                                line: 1,
                                column: 6,
                            },
                        },
                        name: "Int",
                        args: [],
                    },
                },
                second: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 8,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        name: "String",
                        args: [],
                    },
                },
                rest: [],
            },
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 17,
                },
                end: Position {
                    line: 1,
                    column: 21,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 17,
                    },
                    end: Position {
                        line: 1,
                        column: 21,
                    },
                },
                name: "Bool",
                args: [],
            },
        },
        rest: [],
    },
}
