crates/alder-parse/src/snapshots/alder_parse__type___tests__tuple_triple.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\n(Int, String, Bool)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 20,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                name: "Int",
                args: [],
            },
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 13,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                name: "String",
                args: [],
            },
        },
        rest: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 15,
                    },
                    end: Position {
                        line: 1,
                        column: 19,
                    },
                },
                value: Type {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 15,
                        },
                        end: Position {
                            line: 1,
                            column: 19,
                        },
                    },
                    name: "Bool",
                    args: [],
                },
            },
        ],
    },
}
